Fix group detail z-index

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -17,6 +17,7 @@
     bottom: 0;
     background: #fff;
     border-bottom: 1px solid @trim;
+    z-index: -1;
   }
 
   h3 {
